panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_incomplete_struct_not_completed_in_different_scope_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope_2.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid application of `sizeof` to incomplete type `struct T~1`
    ╭─[panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope_2.c:17:21]
    │
 17 │     printf("%zu\n", sizeof *ptr);
    │                     ─────┬─────  
    │                          ╰─────── in this expression
────╯

Error: dereference of pointer to incomplete type `struct T~1`
    ╭─[panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope_2.c:17:29]
    │
 17 │     printf("%zu\n", sizeof *ptr);
    │                             ─┬─  
    │                              ╰─── this expression has type `ptr<struct T~1>`
────╯
